<resources>
    <string name="app_name">ButtonsDinamicCreation</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="color">color</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
</resources>
